<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUp">

    <EditText
            android:layout_width="217dp"
            android:layout_height="41dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText"
            android:textSize="14sp"
            android:hint="@string/email" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:importantForAutofill="no" tools:targetApi="o"/>
    <TextView
            android:text="@string/e_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="22dp"/>
    <TextView
            android:text="@string/usernameUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/usrnmTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/emailTextView"/>
    <EditText
            android:layout_width="218dp"
            android:layout_height="44dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/usernameEditText"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/editText" android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:hint="@string/username_nickname" android:importantForAutofill="no" tools:targetApi="o"/>
    <TextView
            android:text="@string/passwordUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/passTextView" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/usrnmTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <EditText
            android:layout_width="217dp"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passEditText" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/usernameEditText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:hint="@string/password" android:textSize="14sp"
            android:autofillHints="" android:importantForAutofill="no" tools:targetApi="o"/>
    <TextView
            android:text="@string/phone_numberUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneTextView" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/passTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <EditText
            android:layout_width="217dp"
            android:layout_height="46dp"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phoneEditText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:hint="@string/phone" android:textSize="14sp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/passEditText" android:importantForAutofill="no" tools:targetApi="o"/>
    <Button
            android:text="@string/sign_upUp"
            android:layout_width="101dp"
            android:layout_height="38dp"
            android:id="@+id/signupButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/phoneEditText"
            android:background="@android:color/holo_blue_dark"/>
    <TextView
            android:text="@string/compcomp_2019"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/compcompTextView"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>