<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
    >
    <TextView
            android:text="@string/usrnm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/usernameTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/password1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/passwordTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/usernameTextView"/>
    <EditText
            android:layout_width="173dp"
            android:layout_height="34dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/usernameEditText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/usernameTextView"
            android:layout_marginStart="8dp" android:hint="@string/username1" app:layout_constraintHorizontal_bias="0.0"
            android:textSize="13sp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            android:autofillHints="" android:importantForAutofill="no" tools:targetApi="o"/>
    <EditText
            android:layout_width="172dp"
            android:layout_height="33dp"
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:hint="@string/password" android:textSize="13sp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/passwordTextView"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.07"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/usernameEditText" android:visibility="visible"
            android:inputType="textPassword|textVisiblePassword" android:importantForAutofill="no" tools:targetApi="o"/>
    <Button
            android:text="@string/login"
            android:layout_width="115dp"
            android:layout_height="31dp"
            android:id="@+id/loginButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            android:shadowColor="@android:color/holo_blue_dark" android:background="@android:color/holo_blue_dark"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="115dp"
            android:layout_height="31dp"
            android:id="@+id/signUpButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            android:shadowColor="@android:color/holo_blue_dark" android:background="@android:color/holo_blue_dark"/>
    <TextView
            android:text="@string/if_you_don_t_have_acount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/IfTextView" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/signUpButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/compcomp_2019"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/compcompTextView" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>